# third-course-projects

./: README.md
CG/Lab1/: CMakeLists.txt  Display.h  KeyboardActions.h  main.cpp
CG/Lab2/: CMakeLists.txt  main.cpp
CG/Lab3/: CMakeLists.txt  main.cpp
DB/Lab3/: pom.xml
DB/Lab4/: main.py  pub.py  pub.txt  sub.py
ML/Lab1/: Lab.ipynb
ML/Lab2/: Lab2_logistic_regression.ipynb  Lab2_random_forest.ipynb
ML/Lab3/: KMeans.csv  Lab3.ipynb  LogReg.csv
ML/RGR/: RGR.ipynb
ML/RGR/Results/: Logistic_Regression.csv  Naive_bayes.csv  Random_forest.csv  SVM.csv
MO/Lab1/Lab1_NonQuad/: CMakeLists.txt  main.cpp
MO/Lab1/Lab1_Quad/: CMakeLists.txt  main.cpp
MO/Lab4/: Lab4.nb
MO/Lab5/: Lab5_2.nb  Lab5_3.nb
MO/Lab5/Lab5_1/: main.cpp
MO/RGR/: CMakeLists.txt  main.cpp
OS/Lab1/Lab1.2_Phil/: CMakeLists.txt  cmake-build-debug.7z  main.cpp
OS/Lab1/Lab1.3/: CMakeLists.txt  main.cpp
OS/Lab2/Lab2_unx/: CMakeLists.txt  main.cpp
OS/Lab3/Lab3_1FileTreeUNIX/: CMakeLists.txt  main.cpp
OS/Lab3/Lab3_1FileTreeWIN32/: main.cpp  (+1 more)
PC/Coursa4/: Build_guide.md  plot.py  pom.xml
PC/Otrabotka/: main.js  package-lock.json  toparse.json  toparse.xml
TPR/Lab1/: main.py
TPR/Lab2/: algorithmsImplementation.py  container.py  containerSize.py  conteinerSuit.py  main.py
TPR/Lab3/: Lab3.xlsx
TPR/Lab5/: main.py
TZIT/Lab1/: CMakeLists.txt  main.cpp
TZIT/Lab2/: CMakeLists.txt  bmp.cpp  main.cpp
TZIT/Lab3/: 2_1.ps  2_2.ps  2_3.ps  3_1.ps  3_2.ps  3_3.ps  4_1.ps  4_2.ps  4_3.ps  5_1.ps  5_2.ps  5_3.ps  fonts.ps  frame.ps
TZIT/Lab4/: CMakeLists.txt  main.cpp  transform_bmp.h
(+68 files in other folders)
